fix: Improve keypress tab spacing and scaling

--- a/packages/uhk-web/src/app/components/popover/tab/keypress/keypress-tab.component.scss
+++ b/packages/uhk-web/src/app/components/popover/tab/keypress/keypress-tab.component.scss
@@ -14,19 +14,16 @@
         > b {
             display: inline-block;
             margin-right: 0.6em;
-            margin-bottom: 0.5rem;
         }
 
         icon {
             display: inline-block;
             margin-left: 0.6em;
             margin-right: 0.6em;
-            margin-bottom: 0.5rem;
         };
 
         capture-keystroke-button {
             display: inline-block;
-            margin-bottom: 0.5rem;
         }
     }
 
@@ -37,12 +34,10 @@
 
         > b {
             margin-right: 4px;
-            margin-bottom: 0.5rem;
         }
 
         icon {
             margin-left: 0.3em;
-            margin-bottom: 0.5rem;
         };
 
         .btn-toolbar {
